src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
// If you edit this file you need to compile the theme. See README.md for details.
// Global variable overrides. Must be declared before importing Valo.
// Defines the plaintext font size, weight and family. Font size affects general component sizing.
//$v-font-size: 16px;
//$v-font-weight: 300;
//$v-font-family: "Open Sans", sans-serif;
// Defines the border used by all components.
//$v-border: 1px solid (v-shade 0.7);
//$v-border-radius: 4px;
// Affects the color of some component elements, e.g Button, Panel title, etc
//$v-background-color: hsl(210, 0%, 98%);
// Affects the color of content areas, e.g  Panel and Window content, TextField input etc
//$v-app-background-color: $v-background-color;
// Affects the visual appearance of all components
//$v-gradient: v-linear 8%;
//$v-bevel-depth: 30%;
//$v-shadow-opacity: 5%;
// Defines colors for indicating status (focus, success, failure)
//$v-focus-color: valo-focus-color(); // Calculates a suitable color automatically
//$v-friendly-color: #2c9720;
//$v-error-indicator-color: #ed473b;
// For more information, see: https://vaadin.com/book/-/page/themes.valo.html
// Example variants can be copy/pasted from https://vaadin.com/wiki/-/wiki/Main/Valo+Examples
@import "../valo/valo.scss";
@import 'colors-pop';
@import 'elements.scss';

$width-page-min: 768px; // tablets: yes, mobiles: no
$v-border-radius: 2px;
$nav-width: 200px;

@mixin mytheme {
  @include valo;
  @include elements;

  // layout
  #mainPageContainer {
    #headSection {
      position: fixed;
      top: 0;
      width: 100%;
      min-width: $width-page-min;
      height: 6em;
      z-index: 10;
    }

    #mainSection {
      position: absolute;
      top: 6em;
      width: 100%;
      height: calc(100% - 6em - 28px);
      min-width: $width-page-min;
    }

    #footerSection {
      position: fixed;
      bottom: 0;
      width: 100%;
      min-width: $width-page-min;
      z-index: 10;
    }

    #navSection {
      width: $nav-width;
      vertical-align: top;
    }

    #appSection {
      min-width: 600px;
      width: calc(100% - #{$nav-width});
      vertical-align: top;
    }
  }

  // header
  #headerContainer {
    @include linear-gradient(to top left, $color-primary-2, $color-secondary-1-2);
    padding: 1rem;
    color: $color-font-secondary;

    #siteLogo {
      font-size: $v-font-size--large;
      font-style: $v-font-weight--header;
      margin-bottom: 0.5em;
    }

    #headerLeft {
      float: left;
    }

    #headerRight {
      float: right;
      text-align: right;
    }
  }

  // navigation
  #navSection {
    padding: 1em 0 1em;
    background-color: #ffffff;

    #navTitle {
      margin-left: 1em;
    }

    #navMenuWrapper .v-button {
      background: none;
      color: $color-link;
      text-align: left;
      padding: 0.375em 0 0 0.75em;
      margin-left: 1em;
      width: calc(100% - 1em);
      border-radius: 0;

      &.active,
      &:hover {
        background-color: $v-app-background-color;
        border-left: 5px solid $color-primary-0;
        padding-left: calc(0.75em - 5px);
      }

      &:before,
      &:after {
        content: none;
      }
    }
  }

  // main canvas
  #appSection {
    #journal {
      textarea {
        width: 100%;
        margin-bottom: 1em;
        border-radius: $v-border-radius;
      }

      #journalEntryList {
        margin: 2em 0;
        padding: 0;

        .card {
          header {
            font-size: 0.875em;
            color: $color-font-grey;
          }
        }
      }
    }

    #medication {
      #addMedicationTab {
        float: left;
      }

      #medShowExpired {
        float: right;
        margin-top: 0.6em;

        .v-caption {
          margin-right: 0.5em;
        }
      }

      #dataGrid {
        margin: 1em 0 2em;
        border-radius: $v-border-radius;

        thead {
          font-weight: bold;
          font-size: 0.875em;
        }

        .medNotActive td {
          color: $color-font-grey;
          text-decoration: line-through solid lighten($color-font-grey, 20%);
        }
      }
    }

    #events {
      #eventList {
        margin: 1em 0 2em;
        padding: 0;

        .card {
          header {
            font-size: 0.875em;

            .datetime {
              font-weight: bold;
            }

            .therapist {
              color: $color-font-grey;
            }
          }

          h2 {
            margin: 0.25em 0;
          }
        }
      }
    }
  }

  #medDetailView {
    margin: 1em;

    .medDetailViewData input {
      width: 100%;

      &.v-required {
        width: calc(100% - 1em);
      }
    }
  }

  #eventAdd {
    & > table {
      margin: 1em;

      td {
        vertical-align: top;
      }
    }

    .v-disabled {
      display: none;
    }

    input,
    textarea {
      width: 100%;
    }

    div[data-location="intervalTextfield"] {
      width: 60px;
    }

    div[data-location="incButton"],
    div[data-location="decButton"] {
      background-color: $color-font-grey;
    }
  }

  // footer
  #footerSection {
    #footerBar {
      @include linear-gradient(to top left, $color-secondary-1-2, $color-primary-2);
      color: $color-font-secondary;
      font-size: $v-font-size--small;
      padding: 0.25em 1em;
    }
  }
}

